--- a/Stock_Price_Predictor.ipynb
+++ b/Stock_Price_Predictor.ipynb
@@ -4,20 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine Learning Engineer Nanodegree\n",
-    "## Capstone Project\n",
     "## Project: Stock Price Predictor\n",
     "\n",
-    "The challenge of this project is to accurately predict the future closing value of a given stock across a given period of time in the future. For this project I will use a [Long Short Term Memory networks – usually just called “LSTMs”](http://colah.github.io/posts/2015-08-Understanding-LSTMs/) to predict the closing price of the [S&P 500](https://en.wikipedia.org/wiki/List_of_S%26P_500_companies) using a dataset of past prices\n"
+    "The aim of this project is to accurately predict the future closing value of a given stock across a given period of time in the future using [LSTM](http://colah.github.io/posts/2015-08-Understanding-LSTMs/) to predict the closing price of the S&P 500 using a dataset of past prices\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Check Point #1\n",
+    "# CP #1\n",
     "\n",
-    "This is my first checkpoint. The data has been saved to disk."
+    "The data has been saved to disk."
    ]
   },
   {
@@ -26,7 +24,7 @@
    "source": [
     "## Preprocess the data\n",
     "\n",
-    "Now it is time to preprocess the data. In the following cells we will normalise it for better prediction of data.\n",
+    "In the following cells we will normalise data for better prediction of data.\n",
     "\n",
     "**Step 1 :** Get the data from csv file."
    ]
